# gabbro

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-gh-pages
docs/: Cargo.toml  index.html  index.js  worker.js
docs/pkg/: gabbro_web.d.ts  gabbro_web.js  gabbro_web_bg.js  gabbro_web_bg.wasm  gabbro_web_bg.wasm.d.ts  package.json
docs/src/: interfaces.rs  lib.rs  peripherals.rs
src/: apu.rs  bus.rs  cartridge.rs  cpu.rs  gameboy.rs  interfaces.rs  joypad.rs  lib.rs  peripherals.rs  ppu.rs  serial.rs  timer.rs
src/apu/: control.rs  noise.rs  pulse.rs  wave.rs
src/cartridge/: header.rs  mbc1.rs  nombc.rs
src/cpu/: instructions.rs  interrupts.rs  registers.rs
src/cpu/instructions/: base.rs  bitwise.rs  debug.rs  disasm.rs  helpers.rs  mnemonic.rs  mnemonics.rs
src/cpu/instructions/debug/: base.rs  bitwise.rs
src/interfaces/: core.rs  sdl2.rs
src/peripherals/: core.rs  sdl2.rs
src/ppu/: dma.rs  fetcher.rs  fifo.rs  oam.rs  vram.rs
