[package]
name = "gabbro"
version = "0.1.0"
authors = ["Lars de Jong <itsmelmw@gmail.com>"]
license = "GPL-3.0-or-later"
description = "A Game Boy emulator written in Rust"
edition = "2021"

[dependencies]
log = { version = "0.4.17", features = ["max_level_trace", "release_max_level_info"] }
env_logger = { version = "0.10.0", optional = true }
sdl2 = { version = "0.35.2", optional = true }

[features]
sdl2 = ["dep:sdl2"]
logger = ["dep:env_logger"]

[[bin]]
name = "gabbro"
path = "src/bin/sdl2.rs"
required-features = ["sdl2"]

[[bin]]
name = "gabbro-headless"
path = "src/bin/headless.rs"
