[package]
name = "gabbro"
version = "0.1.0"
authors = ["Lars de Jong <itsmelmw@gmail.com>"]
license = "GPL-3.0-or-later"
description = "A Game Boy emulator written in Rust"
readme = "README.md"
repository = "https://github.com/itsmelmw/gabbro"
keywords = ["gameboy", "emulator"]
categories = ["emulators"]
edition = "2021"

[dependencies]
log = { version = "0.4.17", features = [
    "max_level_trace",
    "release_max_level_info",
] }
env_logger = { version = "0.10.0", optional = true }
sdl2 = { version = "0.35.2", optional = true, features = ["bundled"] }
tui = { version = "0.19", optional = true }
crossterm = { version = "0.25", optional = true }

[features]
default = ["logger"]
logger = ["dep:env_logger"]
sdl2 = ["dep:sdl2"]
debug = ["dep:tui", "dep:crossterm"]

[[bin]]
name = "gabbro"
path = "src/bin/gabbro/main.rs"
required-features = ["sdl2"]

[[bin]]
name = "gabbro-db"
path = "src/bin/gabbro-db/main.rs"
required-features = ["debug"]
